--- a/main.html
+++ b/main.html
@@ -57,6 +57,17 @@
 					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png"
 							alt="red apple"></li>
 				</ul>
+				<div class="benefits">
+				<h3>BENEFITS</h3>
+				<ul>
+					<li>Apples are nutricious</li>
+					<li>Apples may be good for weight loss</li>
+					<li>Apples may be good for bone health</li>
+					<li>They linked to a lowest risk of diabetes</li>
+				</ul>
+				</div>	
+				<button>ADD TO CART</button>
+				
 			</div>
 			<div class="description">
 				
